--- a/Device/STM32F303K8Tx/STCubeGenerated/STCubeGenerated.ioc
+++ b/Device/STM32F303K8Tx/STCubeGenerated/STCubeGenerated.ioc
@@ -39,17 +39,26 @@ Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin1=PA1
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA2
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=13
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
 MxCube.Version=4.23.0
@@ -68,8 +77,13 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0.Locked=true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
+PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA2.Signal=S_TIM2_CH3
+PA4.Signal=S_TIM3_CH2
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Signal=S_TIM3_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB6.GPIOParameters=GPIO_FM6
@@ -115,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART1_UART_Init-USART1-false-HAL,4-MX_I2C1_Init-I2C1-false-HAL,5-MX_ADC1_Init-ADC1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART1_UART_Init-USART1-false-HAL,4-MX_I2C1_Init-I2C1-false-HAL,5-MX_ADC1_Init-ADC1-false-HAL,6-MX_TIM2_Init-TIM2-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL
 RCC.ADC12outputFreq_Value=16000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -138,10 +152,35 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,ClockDivision
+TIM2.Prescaler=999
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,ClockDivision
+TIM3.Prescaler=999
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=STCubeGenerated
