ajout gestion_serre et abstraction GPIO

--- a/Device/STM32F303K8Tx/STCubeGenerated/STCubeGenerated.ioc
+++ b/Device/STM32F303K8Tx/STCubeGenerated/STCubeGenerated.ioc
@@ -47,22 +47,24 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PF1 / OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA5
-Mcu.Pin7=PB1
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=17
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB1
+Mcu.PinsNb=19
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
 MxCube.Version=4.23.0
@@ -89,6 +91,10 @@ PA2.Signal=S_TIM2_CH3
 PA3.Locked=true
 PA3.Signal=GPIO_Input
 PA5.Signal=S_TIM2_CH1_ETR
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
